openssl: build static libraries separatelly.
When build with "shared" configure option static libs get wrong DllMain
entry.
On other side we need shared libraries to pass ffmpeg configure test.

--- a/captive/configure.ac
+++ b/captive/configure.ac
@@ -179,6 +179,10 @@ AC_CONFIG_FILES([Makefile
                  openssl/incarcerate
                  openssl/install.sh
                  openssl/uninstall.sh
+                 openssl-static/Makefile
+                 openssl-static/incarcerate
+                 openssl-static/install.sh
+                 openssl-static/uninstall.sh
                  libvpx/Makefile
                  libvpx/incarcerate
                  libvpx/install.sh
