--- a/captive/Makefile.am
+++ b/captive/Makefile.am
@@ -30,7 +30,7 @@ SUBDIRS+= zlib
 #SUBDIRS+= liboil
 
 SUBDIRS+= \
-  libvpx openssl librtmp libvo-aacenc libopencore-amr \
+  libvpx openssl openssl-static librtmp libvo-aacenc libopencore-amr \
   libogg libspeex libvorbis libtheora libmp3lame
 
 if VS_ENABLE_GPL
