--- a/captive/Makefile.in
+++ b/captive/Makefile.in
@@ -153,7 +153,7 @@ am__define_uniq_tagged_files = \
 ETAGS = etags
 CTAGS = ctags
 CSCOPE = cscope
-DIST_SUBDIRS = zlib libvpx openssl librtmp libvo-aacenc \
+DIST_SUBDIRS = zlib libvpx openssl openssl-static librtmp libvo-aacenc \
 	libopencore-amr libogg libspeex libvorbis libtheora libmp3lame \
 	libx264 ffmpeg
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -358,9 +358,9 @@ EXTRA_DIST = COPYING
 #SUBDIRS+= libtiff spandsp
 
 #SUBDIRS+= liboil
-SUBDIRS = zlib libvpx openssl librtmp libvo-aacenc libopencore-amr \
-	libogg libspeex libvorbis libtheora libmp3lame $(am__append_1) \
-	ffmpeg
+SUBDIRS = zlib libvpx openssl openssl-static librtmp libvo-aacenc \
+	libopencore-amr libogg libspeex libvorbis libtheora libmp3lame \
+	$(am__append_1) ffmpeg
 all: all-recursive
 
 .SUFFIXES:
