--- a/captive/openssl/incarcerate.in
+++ b/captive/openssl/incarcerate.in
@@ -6,6 +6,12 @@ prefix="@prefix@"
 exec_prefix="@exec_prefix@"
 HOST_OS="@HOST_OS@"
 CROSS_COMPILE="@VS_CROSS_PREFIX@"
+NO_SHARED=""
+STATIC_PATH=""
+if [[ x"$1" == x"--static" ]]; then
+	NO_SHARED="no-"
+	STATIC_PATH="../openssl-static/"
+fi
 
 OPENSSL_CONFIG=
 # OpenSSL does not follow the GNU conventions and so we
@@ -53,13 +59,13 @@ esac
 # OpenSSL does not support in-tree builds, and so we copy the entire source
 # directory to the build directory, and then build in place.
 # copy over all the source
-if [ ! -f "@abs_builddir@/csrc/Configure" ]; then
-  echo "Copying @abs_srcdir@/csrc to @abs_builddir@/csrc"
+if [ ! -f "@abs_builddir@/${STATIC_PATH}csrc/Configure" ]; then
+  echo "Copying @abs_srcdir@/csrc to @abs_builddir@/${STATIC_PATH}csrc"
   # create the directory
-  mkdir -p "@abs_builddir@/csrc"
-  cp -r "@abs_srcdir@/csrc/"* "@abs_builddir@/csrc/"
+  mkdir -p "@abs_builddir@/${STATIC_PATH}csrc"
+  cp -r "@abs_srcdir@/csrc/"* "@abs_builddir@/${STATIC_PATH}csrc/"
   # and make everything user writeable so distcheck will pass
-  chmod -R u+w "@abs_builddir@/csrc/"*
+  chmod -R u+w "@abs_builddir@/${STATIC_PATH}csrc/"*
 fi
 
 # We use the cross-compile setting for openssl but still pass through our
@@ -69,8 +75,8 @@ LDFLAGS="-L@abs_top_builddir@/stage@libdir@ @LDFLAGS@" \
 CPPFLAGS="@CPPFLAGS@" \
 CXXFLAGS="@CXXFLAGS@" \
 ASFLAGS="@ASFLAGS@" \
-PATH="$PATH:@abs_top_builddir@@bindir@@" sh "@abs_builddir@/csrc/Configure" \
-  ${OPENSSL_CONFIG} no-shared zlib -fPIC \
+PATH="$PATH:@abs_top_builddir@@bindir@@" sh "@abs_builddir@/${STATIC_PATH}csrc/Configure" \
+  ${OPENSSL_CONFIG} ${NO_SHARED}shared zlib -fPIC \
   --cross-compile-prefix="${CROSS_COMPILE}" \
   --openssldir=${prefix} \
   --with-zlib-include="@abs_top_builddir@/stage@includedir@" \
