ant: enable parallel build

--- a/mk/buildtools/build.properties
+++ b/mk/buildtools/build.properties
@@ -36,6 +36,7 @@ build.compiler=modern
 
 # must be GNU make
 build.native.make=make
+build.native.make.jobs=8
 
 # generic compiler options
 build.verbose=no
