libx264: force yasm assembler

--- a/captive/libx264/incarcerate.in
+++ b/captive/libx264/incarcerate.in
@@ -63,7 +63,7 @@ CPPFLAGS="@CPPFLAGS@" \
 CXX="@CXX@" \
 CXXFLAGS="@CXXFLAGS@" \
 NM="@NM@" \
-AS="@AS@" \
+AS="yasm" \
 ASFLAGS="@ASFLAGS@" \
 STRIP="@STRIP@" \
 RANLIB="@RANLIB@" \
